log
Thu May 12 15:26:02 UTC 2022: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
af4d714
Thu May 12 15:51:06 UTC 2022: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:13: error: unused variable ‘k’ [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c:48:10: error: unused variable ‘j’ [-Werror=unused-variable]
   int i, j, k;
          ^
cc1: all warnings being treated as errors
Compilation failed
e51c115
Thu May 12 15:51:14 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0e24cb1
Thu May 12 15:53:08 UTC 2022: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
056616f
Thu May 12 15:55:36 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:8: error: redefinition of ‘ptr’
   int *ptr = (int*) calloc(10, sizeof(int));
        ^~~
sudoku.c:49:8: note: previous definition of ‘ptr’ was here
   int *ptr = (int*) calloc(10, sizeof(int));
        ^~~
Compilation failed
98556f1
Thu May 12 15:56:54 UTC 2022: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4e2281f
Thu May 12 16:00:35 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2c36239
Thu May 12 22:49:30 UTC 2022: 
 sudoku.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
 tests:  0|0
9922be8
Thu May 12 22:50:24 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
036b51d
Thu May 12 22:51:33 UTC 2022: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
086b4d9
Thu May 12 22:52:30 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
913dac5
Thu May 12 22:53:08 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
66c5d81
Thu May 12 22:54:05 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a09c93e
Thu May 12 23:01:21 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
034b89d
